Mobile Design Finalized

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/main.css">
 
   <title>Frontend Mentor | Single Price Grid Component</title>
 </head>
@@ -26,7 +27,10 @@
       <!-- price -->
       <section class="grid__price">
         <h3 class="grid__price--title">Monthly Subscription</h3>
-        <p class="grid__price--value-text"><span class="grid__price--value">&dollar;29</span> per month</p>
+        <p class="grid__price--value">
+          &dollar;29
+          <span class="grid__price--value-text">per month</span>
+        </p>
         <p class="grid__price--description">Full access for less than &dollar;1 a day</p>
         <button class="grid__price--btn">Sign Up</button>
       </section>
